--- a/app/src/main/res/layout/item_view_list_of_data.xml
+++ b/app/src/main/res/layout/item_view_list_of_data.xml
@@ -1,32 +1,79 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools">
+<layout xmlns:tools="http://schemas.android.com/tools"
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <data>
+
+        <variable
+            name="report"
+            type="com.mnashat_dev.saveme.data.models.Report" />
+
+        <variable
+            name="clickListener"
+            type="com.mnashat_dev.saveme.listofreports.ReportListener" />
 
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/margin_normal"
         android:layout_marginStart="@dimen/margin_small"
+        android:layout_marginTop="@dimen/margin_normal"
         android:layout_marginEnd="@dimen/margin_small"
-        android:background="@drawable/round_shape">
+        android:background="@drawable/round_shape"
+        android:onClick="@{() -> clickListener.onClick(report)}">
+
+
+        />-->
+
+
+        <!--        <TextView-->
+        <!--            android:id="@+id/textView4"-->
+        <!--            android:layout_width="0dp"-->
+        <!--            android:layout_height="wrap_content"-->
+        <!--            android:layout_marginTop="@dimen/margin_normal"-->
+        <!--            android:layout_marginEnd="@dimen/margin_normal"-->
+        <!--            android:onClick="@{() -> clickListener.onClick(report)}"-->
+        <!--            android:padding="@dimen/padding_small"-->
+        <!--            android:text="المرسل "-->
+        <!--            android:textColor="@color/black"-->
+        <!--            android:textSize="@dimen/text_size_normal"-->
+        <!--            app:layout_constraintEnd_toEndOf="parent"-->
+        <!--            app:layout_constraintStart_toEndOf="@+id/ic_show_or_hide_details"-->
+        <!--            app:layout_constraintTop_toTopOf="parent" />-->
 
         <TextView
+            android:id="@+id/textView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:padding="@dimen/padding_normal"
-            android:text=" المرسل مصطفى احمد محمد"
-            android:textSize="@dimen/text_size_medium"
-            app:layout_constraintBottom_toBottomOf="parent"
+            android:layout_margin="@dimen/margin_normal"
+            android:padding="@dimen/padding_small"
+            android:text="ghgfhdsgfhgf"
+            android:textColor="@color/black"
+            android:textSize="@dimen/text_size_normal"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.5"
-            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.5" />
+            app:senderName="@{report}" />
 
+        <ImageView
+            android:id="@+id/imageView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/ic__time"
+            android:layout_marginTop="@dimen/margin_small"
+            app:layout_constraintEnd_toEndOf="@+id/textView"
+            app:layout_constraintTop_toBottomOf="@+id/textView" />
+
+        <TextView
+            android:id="@+id/tv_timing_of_send"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="12/34/1998"
+            app:timingOfSend="@{report}"
+            android:layout_marginEnd="@dimen/margin_small"
+            app:layout_constraintBottom_toBottomOf="@+id/imageView"
+            app:layout_constraintEnd_toStartOf="@+id/imageView"
+            app:layout_constraintTop_toTopOf="@+id/imageView" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
